--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Chuck Norris Jokes REST API</title>
-
+  <link rel="icon" type="image/x-icon" href="/_assets/icons/favicon.png">
     <link rel="stylesheet" href="css/styles.css?v1" />
   </head>
 
