added async await and comments

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     </main>
     <footer>Tibor Kopca @ 2024</footer>
     <!-- JS -->
-    <script src="js/scriptChuck.js"></script>
+    <script src="js/scriptChuckFetch.js"></script>
   </body>
 </html>
